# fast_fp

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  rust-toolchain
.cargo/: config.toml
benches/: geometry.rs  math.rs  operations.rs
src/: lib.rs  nalgebra.rs  num_traits.rs  poison.rs
src/math/: math.c  mod.rs  poison_safe.c  poison_unsafe.c
src/poison/: freeze.ll  mod.rs
