[package]
name = "fast_fp"
version = "0.1.1"
authors = ["Renar Narubin <renar@standard.ai>"]
edition = "2021"
description = "Floating point fast-math optimizations"
repository = "https://github.com/standard-ai/fast_fp"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["fast-math", "performance"]
categories = ["mathematics"]
documentation = "https://docs.rs/fast_fp"

[lib]
bench = false

[[bench]]
name = "operations"
harness = false

[features]
default = ["num-traits"]

# optional trait implementations
nalgebra-v021 = ["num-traits", "nalgebra_v021", "simba_v01", "approx_v03"]
nalgebra-v029 = ["num-traits", "nalgebra_v029", "simba_v06", "approx_v05"]

[dependencies]
paste = "1"

num-traits = { version = "0.2", optional = true }

approx_v03 = { package = "approx", version = "0.3", optional = true }
nalgebra_v021 = { package = "nalgebra", version = "0.21", optional = true }
simba_v01 = { package = "simba", version = "0.1", optional = true }

approx_v05 = { package = "approx", version = "0.5", optional = true }
nalgebra_v029 = { package = "nalgebra", version = "0.29", optional = true }
simba_v06 = { package = "simba", version = "0.6", optional = true }

[build-dependencies]
cc = "1"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
rand = "0.8"

[profile.release]
lto="thin"
codegen-units=1

[package.metadata.docs.rs]
all-features = true
